--- a/CryptopiaTrader/Other/Base.lproj/LaunchScreen.storyboard
+++ b/CryptopiaTrader/Other/Base.lproj/LaunchScreen.storyboard
@@ -17,10 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="coloredLogo" translatesAutoresizingMaskIntoConstraints="NO" id="rB6-lS-aRf">
-                                <rect key="frame" x="16" y="127" width="343" height="169"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KVR-Lw-Wok">
                                 <rect key="frame" x="16" y="569" width="343" height="78"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -30,8 +26,19 @@ AppRocket</string>
                                 <color key="textColor" red="0.35294117650000001" green="0.38823529410000002" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="darkLogo" translatesAutoresizingMaskIntoConstraints="NO" id="8hW-5B-vGs">
+                                <rect key="frame" x="36" y="109" width="302" height="154"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="154" id="DIn-zj-LXg"/>
+                                    <constraint firstAttribute="width" constant="302" id="SPJ-s3-lqE"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="8hW-5B-vGs" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="oqR-JP-Vhh"/>
+                            <constraint firstItem="8hW-5B-vGs" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="89" id="wBc-gR-thH"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -41,6 +48,6 @@ AppRocket</string>
         </scene>
     </scenes>
     <resources>
-        <image name="coloredLogo" width="411" height="105"/>
+        <image name="darkLogo" width="682" height="341"/>
     </resources>
 </document>
